TabLayout/TabGroup.module.less
// TabGroup.module.less
//
@import "../styles/mixins.less";
@import "../styles/skin.less";
@import "../styles/variables.less";

.tab {
	font-size: @lime-tablayout-tab-font-size;
	margin: @lime-tablayout-tab-margin;

	&.horizontal {
		&.button {
			display: block;
			height: @lime-tablayout-tab-horizontal-button-height;
			width: var(--tab-width);
			margin: @lime-tablayout-tab-margin;
			.padding-start-end(@lime-tablayout-tab-horizontal-padding, @lime-tablayout-tab-horizontal-padding);

			&.small {
				font-size: @lime-tablayout-tab-small-font-size;
				height: @lime-tablayout-tab-horizontal-small-button-height;
				line-height: @lime-tablayout-tab-horizontal-small-button-line-height;
			}
		}
	}

	&.vertical {
		&.button {
			height: @lime-tablayout-tab-vertical-button-height;
			padding: @lime-tablayout-tab-vertical-padding;

			&.collapsed {
				width: @lime-tablayout-tab-vertical-button-height;
			}

			&.hasIcon {
				padding: @lime-tablayout-tab-vertical-icon-padding;
			}

			&.hasIcon:not(&.collapsed) {
				.padding-start-end(@lime-tablayout-tab-vertical-icon-padding, @lime-tablayout-tab-vertical-icon-padding-right);

				.icon {
					.margin-start-end(0, @lime-tablayout-tab-vertical-margin);
				}
			}

			.lime-custom-text({
				font-size: @lime-tablayout-tab-font-size;
				min-width: @lime-button-height;
			})
		}

		.client {
			text-align: left;

			.enact-locale-rtl({
				text-align: right;
			});
		}
	}

	.applySkins({
		&.button {
			&.selected {
				background-color: @lime-tablayout-tab-container-selected-color;

				.bg {
					opacity: 0;
				}
			}
		}
	});
}

.tabGroup {
	.tabs {
		display: flex;
	}

	&.horizontal {
		margin-left: calc((1 - var(--scrollable)) * var(--offset));
		padding: @lime-tablayout-horizontal-tabs-padding;

		&:not(.scrollable) {
			width: var(--tabs-width);
		}

		.tabs {
			gap: @lime-tablayout-horizontal-tabs-spacing;
			width: calc(var(--tabs-width) + var(--scrollable) * var(--offset) * 2);
			.padding-start-end(calc(var(--scrollable) * var(--offset)), calc(var(--scrollable) * var(--offset)))
		}
	}

	&.vertical {
		padding: @lime-tablayout-vertical-tabs-padding;

		&.scrollable {
			height: @lime-tablayout-tab-group-vertical-height;
		}

		.tabs {
			flex-direction: column;
			gap: @lime-tablayout-vertical-tabs-spacing;
		}

		.scrollbarTrack {
			margin-top: @lime-tablayout-tab-group-vertical-scrollbar-track-margin;
			margin-bottom: @lime-tablayout-tab-group-vertical-scrollbar-track-margin;
			height: @lime-tablayout-tab-group-vertical-scrollbar-height;
		}

		&.collapsed {
			height: fit-content;
		}
	}
}

.applySkins({
	.tabGroup {
		background-color: @lime-tablayout-tab-group-container-color;
		border-radius: @lime-tablayout-border-radius;

		// Apply transparent background to the child component so if the Scroller is used, then it will not have doubled background color
		> :first-child {
			background: transparent;
		}

		.tab {
			&.vertical {
				&.button {
					&.selected {
						.bg {
							/* Override TabLayout */
						}
					}

					.focus({
						.bg {
							/* Override TabLayout */
						}
					});
				}
			}
		}
	}
});

